Fix OAuth redirect to use devresult.com instead of localhost
- Update AuthContext to use REACT_APP_REDIRECT_URL environment variable
- Add redirect URL configuration to env.example
- Update Google Auth setup guide with production redirect instructions
- Ensure OAuth redirects to https://devresult.com in production

--- a/env.example
+++ b/env.example
@@ -3,6 +3,11 @@
 REACT_APP_SUPABASE_URL=your_supabase_project_url
 REACT_APP_SUPABASE_ANON_KEY=your_supabase_anon_key
 
+# OAuth Redirect URL (optional)
+# For production, set this to your production domain (e.g., https://devresult.com)
+# If not set, it will use the current window.location.origin
+REACT_APP_REDIRECT_URL=https://devresult.com
+
 
 
 
